# kintsugnosis-ahi

./: .firebaserc  .flake8  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  apphosting.yaml  firebase.json  firestore.rules  pyproject.toml  requirements.txt  vercel.json
.github/: copilot-instructions.md
.github/workflows/: contract-gate.yml  deploy.yml  ecosystem-validation.yml  physics-integrity.yml  python-ci.yml
.jules/: bolt.md  deliberations.md  palette.md  sentinel.md
ahi-unified-platform/: .env.example  Dockerfile  firestore.rules  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts
ahi-unified-platform/src/: middleware.ts  proxy.ts
ahi-unified-platform/src/app/: GovernanceHome.tsx  LandingCyber.module.css  LandingCyber.tsx  globals.css  layout.tsx  page.tsx
ahi-unified-platform/src/hooks/: use-usage-limit.ts
ahi-unified-platform/src/lib/: firebase.ts  utils.ts
ahi-unified-platform/src/types/: stripe.d.ts
dataconnect/: dataconnect.yaml
dataconnect/connector/: connector.yaml  mutations.gql  queries.gql
dataconnect/schema/: schema.gql
docs/guides/: SETUP_PAYMENTS_AUTH.md
docs/proposals/: RFC-001-dashboard-scope.md  RFC-002-SVM-Module.md
legacy/malbolge_engine/: README.md  debug_bfs_logic.py  malbolge_system.py  materialize_10d.py  search_m_vaccine.py
malbolge_engine/: identity_seal.py
scripts/: contract_check.py  mirror_effect_check.py  run_stress_tests.sh  safe_sync.py  stress_test_geometric_pulse.py  verify_curvature_integrity.py
verification/: verify_drag_drop.py  verify_skip_link.py
(+53 files in other folders)
